Added DbContext to configure EF Core

--- a/Books.Web/appsettings.json
+++ b/Books.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=(localdb)\\MSSQLLocalDB; Database=Pr-Books_Db; integrated security=SSPI; TrustServerCertificate=True"
+  }
 }
