Refactored the project structure of the application from a single project file to multiple project files - for a cleaner and more maintainable architecture

--- a/Books.DataAccess/Books.DataAccess.csproj
+++ b/Books.DataAccess/Books.DataAccess.csproj
@@ -6,4 +6,18 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Books.Models\Books.Models.csproj" />
+    <ProjectReference Include="..\Books.Utility\Books.Utility.csproj" />
+  </ItemGroup>
+
 </Project>
