Implemented file/image upload of ImageUrl for Upsert in Book controller and view

--- a/Books.Web/Books.Web.csproj
+++ b/Books.Web/Books.Web.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Books.DataAccess\Books.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\book\" />
+  </ItemGroup>
+
 </Project>
